--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "react-window": "^2.1.0",
     "sqlite3": "^5.1.7"
   },
